# GSM

./: CMakeLists.txt  GeneralData.gnrl  Makefile  buildResources.sh  gsm
data/: GeneralData.gnrl
data/imageCache/: 31_3.gsmii
data/originalImage/: 31_3.gsmoi  31_4.gsmoi
data/profiles/: Tes.gsmpf
data/projects/: ,..gsmpj  Proyecto Nuevo.gsmpj  Test.gsmpj  dddd.gsmpj
src/: main.cc
src/controller/: ImagesController.cc  ManagerController.cc  NewProfileController.cc  NewprojectController.cc  PointsController.cc  SplashController.cc  glarea.cc
src/include/: ImageResume.h  ImagesController.h  ManagerController.h  NewProfileController.h  NewProjectController.h  PointsController.h  SplashController.h
src/interfaces/: examplewindow.cc  other.glade
src/model/: ImageResume.cc
src/resources/: buildResources.sh  glarea-fragment.glsl  glarea-vertex.glsl  resources.c  resources.xml
src/view/: ProjectSelector.glade  all.css  images.glade  images.glade~  manager.glade  manager.glade~  newProject.glade  newProject.glade~  other.glade~  points.glade  points.glade~  splash.glade
